--- a/ui-web-service/src/pages/Sweepstake/Sweepstakes.scss
+++ b/ui-web-service/src/pages/Sweepstake/Sweepstakes.scss
@@ -35,8 +35,9 @@
   .topSection {
     display: flex;
     flex-direction: column;
-    position: fixed;
+    position: absolute;
     top: 0;
+    z-index: 2;
     width: 100%;
     justify-content: center;
     box-sizing: border-box;
@@ -155,7 +156,7 @@
 
   .sweepstakes {
     width: 100%;
-    margin-top: 30vh;
+    margin-top: 28vh;
 
     .titleDesktopSection {
       visibility: hidden;
